<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="ClickText">Click here</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="EditText">Type here</string>
    <string name="TextViewText">Look at my GUI</string>
    <string name="Toast_message">Here is more information</string>
    <string name="Snackbar_message1">The switch is now on</string>
    <string name="Snackbar_message2">The switch is now off</string>
    <string name="Checkbox_message1">The checkbox is now on</string>
    <string name="Checkbox_message2">The checkbox is now off</string>
    <string name="TextViewLab3">Enter your email address:</string>
    <string name="EditText1_Lab3">Type email here</string>
    <string name="EditText2_Lab3">Type your password:</string>
    <string name="ButtonText_Lab3">Login</string>
    <string name="YourProfile">Your profile</string>
    <string name="YourName">Your name:</string>
    <string name="YourEmail">Your email:</string>
    <string name="YourPic">Your picture:</string>
    <string name="EnterYourName">"Enter your name:</string>
    <string name="EnterYourEmail">Enter your email:</string>
    <string name="ClickPicAbove">Click the button above to take a picture</string>
    <string name="lab4button">Go to chat</string>
    <string name="SendButton">Send</string>
    <string name="ReceiveButton">Receive</string>
</resources>