<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewText"
        android:textSize="30dp" />


    <Button
        android:id="@+id/myButton"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/ClickText"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/myCheckBox"
        android:layout_width="189dp"
        android:layout_height="51dp"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/myButton"
        android:text="@string/CheckBoxText" />




        <ImageButton
            android:id="@+id/myImageButton"
            android:layout_below="@id/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag" />

        <Switch
            android:id="@+id/mySwitch"
            android:layout_below="@id/myCheckBox"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/myImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SwitchText" />

        <EditText
            android:layout_below="@id/myImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText"
            android:inputType="textPersonName"
            android:id="@+id/myEditText"/>

</RelativeLayout>