<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_weight="1"
    android:layout_gravity="fill"
    android:orientation="vertical">

    <TextView
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewText"
        android:layout_column="0"
        android:layout_row="0"
        android:textSize="30dp" />

    <Button
        android:id="@+id/myButton"
        android:layout_gravity="fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/ClickText" />

    <CheckBox
        android:id="@+id/myCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/CheckBoxText" />

    <ImageButton
        android:id="@+id/myImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/SwitchText" />
    <EditText
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:hint="@string/EditText"
        android:inputType="textPersonName|textCapWords"
        android:id="@+id/myEditText"/>

</GridLayout>